vlib/v/checker/tests/modules/enum_from_string_in_different_mods.out
vlib/v/checker/tests/modules/enum_from_string_in_different_mods/src/main.v:3:8: warning: module 'mod (enum_from_string_in_different_mods.src.mod)' is imported but never used
    1 | module main
    2 | 
    3 | import mod { MyEnum, MyStruct }
      |        ~~~
    4 | 
    5 | fn main() {
vlib/v/checker/tests/modules/enum_from_string_in_different_mods/src/main.v:3:14: error: module `enum_from_string_in_different_mods.src.mod` type `MyEnum` is private
    1 | module main
    2 | 
    3 | import mod { MyEnum, MyStruct }
      |              ~~~~~~
    4 | 
    5 | fn main() {
vlib/v/checker/tests/modules/enum_from_string_in_different_mods/src/main.v:6:6: error: module `enum_from_string_in_different_mods.src.mod` type `enum_from_string_in_different_mods.src.mod.MyEnum` is private
    4 | 
    5 | fn main() {
    6 |     _ = MyEnum.from_string('item1')
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    7 |     _ = MyStruct.from_string('item1')
    8 | }
vlib/v/checker/tests/modules/enum_from_string_in_different_mods/src/main.v:6:4: error: assignment mismatch: 1 variable(s) but `MyEnum.from_string()` returns 0 value(s)
    4 | 
    5 | fn main() {
    6 |     _ = MyEnum.from_string('item1')
      |       ^
    7 |     _ = MyStruct.from_string('item1')
    8 | }
vlib/v/checker/tests/modules/enum_from_string_in_different_mods/src/main.v:7:6: error: expected enum, but `enum_from_string_in_different_mods.src.mod.MyStruct` is struct
    5 | fn main() {
    6 |     _ = MyEnum.from_string('item1')
    7 |     _ = MyStruct.from_string('item1')
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 | }
vlib/v/checker/tests/modules/enum_from_string_in_different_mods/src/main.v:7:4: error: assignment mismatch: 1 variable(s) but `MyStruct.from_string()` returns 0 value(s)
    5 | fn main() {
    6 |     _ = MyEnum.from_string('item1')
    7 |     _ = MyStruct.from_string('item1')
      |       ^
    8 | }
